fix background baby css so he is always watching.. even on mobiles

--- a/src/app.css
+++ b/src/app.css
@@ -18,16 +18,16 @@ a {
     text-decoration: none;
 }
 
-body, html {
+body {
     background-position: right;
     background-size: 100vh;
     background-repeat: no-repeat;
-    height: 100vh;
-    width: 100vw;
-    font-family: "Noto Sans Mono", "Consolas", "SF Mono", monospace;
+    background-attachment: fixed;
     background-color: black;
     margin: 0;
     padding: 0;
+    min-height: 100vh;
+    font-family: "Noto Sans Mono", "Consolas", "SF Mono", monospace;
     color: white;
 }
 
